tests/NormalTests/paczka1/fuzzy1/56677376.err
Error in line 11: Y8s S242 93,1
Error in line 14: Y8s A2 249r4
Error in line 16: EJktyZ9wmcU S244 85,8
Error in line 21: EJktyZ9wmcU A2 61,3
Error in line 13: Y8s A2 91,7
Error in line 30: QXSUwZoBVs S242 7,2
